# ai-slack-bot

./: main.py  pyproject.toml
prompts/: summary_prompt.md
src/: crawler.py  slack_sender.py  summarizer.py  summary_error.py  url_extractor.py
